--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
