--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@ngrx/effects": "^8.2.0",
     "@ngrx/store": "^8.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
