--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.1.1",
     "@ngrx/effects": "^8.2.0",
     "@ngrx/store": "^8.1.0",
+    "@ngrx/store-devtools": "^8.2.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.4.0",
