--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "save": "^2.4.0",
     "tslib": "^1.9.0",
