Project feature started

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
     "@schematics/angular:component": {
       "styleext": "scss"
     }
+  },
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
   }
 }
